Migrate to MiniMessage api